Added expiration parameter and delete endpoint with a private_id
