# docs/openapi/secret.yaml
@@ -7,6 +7,32 @@ servers:
   - url: http://localhost:8080/api/v1/
     description: Local server
 paths:
+  /secret/{private_id}:
+    delete:
+      tags:
+        - Secret
+      summary: Delete a secret
+      description: Permanently delete a secret identified by the private ID.
+      parameters:
+        - in: path
+          name: private_id
+          schema:
+            type: string
+          required: true
+          description: Private ID of the secret
+      responses:
+        '204':
+          description: Successful deletion, no content returned
+        '404':
+          description: Secret not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                detail: The secret does not exist
+                statusCode: 404
+
   /secret:
     post:
         tags:
@@ -20,13 +46,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/CreateSecretRequest'
               examples:
-                Without Password:
+                Without password:
                   value:
                     content: this is my secret
-                With Password:
+                With password:
                   value:
                     content: this is my secret
                     pwd: myPassword
+                With expiration:
+                  value:
+                    content: this is my secret
+                    expiration: 3d
+                With all fields:
+                  value:
+                    content: this is my secret
+                    pwd: myPassword
+                    expiration: 3d
           required: true
         responses:
           '201':
@@ -37,6 +72,7 @@ paths:
                   $ref: '#/components/schemas/CreateSecretResponse'
                 example:
                   id: 37c3d09a-62eb-4654-acd9-7d714d89f6ac
+                  private_id: 38cc52aa-e5c2-4574-86fa-e4ba04bfa1da
                   expiredAt: 2024-10-06T13:33:46.099028+02:00
           '400':
             description: Invalid input
@@ -117,7 +153,7 @@ paths:
   /healthz:
     get:
       tags:
-        - Observability
+        - Monitoring
       summary: Check service status
       description: Check status of service and infrastructure
 
@@ -129,7 +165,7 @@ paths:
   /metrics:
     get:
       tags:
-        - Observability
+        - Monitoring
       summary: Prometheus endpoint
       description: Returns metrics from the service
       responses:
@@ -151,15 +187,22 @@ components:
         pwd:
           type: string
           description: password to decrypt
+        expiration:
+          type: string
+          description: "expiration can include one of these values: 7d, 3d, 1d, 12h, 4h, 1h, 30m, 5m"
     CreateSecretResponse:
       type: object
       required:
         - id
+        - privateId
         - expiredAt
       properties:
         id:
           type: string
           description: identifier of secret
+        private_id:
+          type: string
+          description: private identifier of secret
         expiredAt:
           type: string
           description: datetime to expire (UTC)
