# internal/api/handler/secret/handler.go
@@ -20,6 +20,7 @@ func NewHandler(secretService *service.SecretService) *Handler {
 }
 
 func (h *Handler) CreateSecret(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 	var request CreateSecretRequest
 	err := json.NewDecoder(r.Body).Decode(&request)
 	if err != nil {
@@ -27,7 +28,7 @@ func (h *Handler) CreateSecret(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	secret, err := h.secretService.CreateSecret(r.Context(), request.Content, request.Pwd)
+	secret, err := h.secretService.CreateSecret(ctx, request.Content, request.Pwd, request.Expiration)
 	if err != nil {
 		api.EncodeHTTPError(api.NewHTTPError(err.Error(), http.StatusBadRequest), w)
 		return
@@ -35,6 +36,7 @@ func (h *Handler) CreateSecret(w http.ResponseWriter, r *http.Request) {
 
 	response := CreateSecretResponse{
 		ID:        secret.ID,
+		PrivateID: secret.PrivateID,
 		ExpiredAt: secret.ExpiredAt,
 	}
 
@@ -45,8 +47,9 @@ func (h *Handler) RetrieveSecret(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	pwd := r.Header.Get("X-Password")
 	ID := vars["id"]
+	ctx := r.Context()
 
-	secret, err := h.secretService.RetrieveSecret(r.Context(), ID, pwd)
+	secret, err := h.secretService.RetrieveSecret(ctx, ID, pwd)
 	if err != nil {
 		if errors.Is(err, service.ErrSecretDoesNotExist) {
 			api.EncodeHTTPError(api.NewHTTPError("The secret does not exist or has already been read.", http.StatusNotFound), w)
@@ -65,4 +68,22 @@ func (h *Handler) RetrieveSecret(w http.ResponseWriter, r *http.Request) {
 	}
 
 	api.EncodeHTTPResponse(response, w, http.StatusOK)
+}
+
+func (h *Handler) DeleteSecret(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	privateID := vars["private_id"]
+	ctx := r.Context()
+
+	err := h.secretService.DeleteSecret(ctx, privateID)
+	if err != nil {
+		if errors.Is(err, service.ErrSecretDoesNotExist) {
+			api.EncodeHTTPError(api.NewHTTPError("The secret does not exist ", http.StatusNotFound), w)
+			return
+		}
+		api.EncodeHTTPError(api.NewHTTPError("There was an error reading the secret. Please try again later.", http.StatusInternalServerError), w)
+		return
+	}
+
+	api.EncodeHTTPResponse(nil, w, http.StatusNoContent)
 }
