# internal/api/handler/secret/request.go
@@ -1,6 +1,7 @@
 package secret
 
 type CreateSecretRequest struct {
-	Content string `json:"content"`
-	Pwd     string `json:"pwd"`
+	Content    string `json:"content"`
+	Pwd        string `json:"pwd"`
+	Expiration string `json:"expiration"`
 }
